# GitInfo

./: CMakeLists.txt  GitInfo.cpp.in  GitInfo.h  LICENSE  git_watcher.cmake
